--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
+<!DOCTYPE html>
+  <html lang="en">
+  	<head>
+        <meta name="viewport" content="width=device-width," initial-scale=1>
+  	    <meta charset="UTF-8">
+  	    <title>Tony Wahula</title>
+        <script src="https://use.fontawesome.com/3a60baea57.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:700" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    </head>
 
+    <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-sm navbar-fixed-top">
+      <a class="navbar-brand" href="index.html">Tony Wahula</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="work.html">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+              <div class="item">
+                   <p class="label success new-label"><span class="align">Hello,</span> I'm Tony Wahula</p>
+              </div>
+              <p>I'm a full stack web developer living in sunny Denver, Colorado.  </p>
+            </div>
+            <div class="col-md-4">
+                        <!--Panel-->
+              <div class="panel text-center">
+                <h1 class="skills">Skills</h1>
+                <div class="skills-tabs">
+                  <a class="btn btn btn-primary">HTML5</a>
+                  <a class="btn btn btn-primary">CSS3</a>
+                  <a class="btn btn btn-primary">MySQL</a>
+                  <a class="btn btn btn-primary">Node.js</a>
+                  <a class="btn btn btn-primary">Bootstrap</a>
+                  <a class="btn btn btn-primary">Express</a>
+                  <a class="btn btn btn-primary">MongoDB</a>
+                  <a class="btn btn btn-primary">React</a>
+                  <a class="btn btn btn-primary">Sequelize</a>
+                  <a class="btn btn btn-primary">Javascript</a>
+                  <a class="btn btn btn-primary">JQuery</a>
+                  <a class="btn btn btn-primary">Git</a>
+                  <a class="btn btn btn-primary">Command Line</a>
+                  <a class="btn btn btn-primary">GitHub</a>
+                  <a class="btn btn btn-primary">Materialize</a>
+                </div>
+              </div>
+                      <!--/.Panel-->
+            </div>
+            <!-- <div class="col-md-4">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Skills</h3>
+                </div>
+                <div class="panel-body">
+                  <i class="fa fa-html5" aria-hidden="true"></i>HTML5
+                  <i class="fa fa-css3" aria-hidden="true"></i>CSS3
+                  <p>Javascript MySQL React MongoDB Express Node.js Bootstrap</p>
+                </div>
+              </div>
+            </div> -->
+        </div>
+      </div>
+
+    <footer class="footer">
+      <div class="container text-center">
+        <span class="text-muted">Copyright &copy; 2017 Tony Wahula</span>
+        <a class="social" href="https://github.com/wahula4" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+        <a class="social" href="www.linkedin.com/in/tony-wahula" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+  </body>
+</html>
