--- a/work.html
+++ b/work.html
@@ -1,1 +1,200 @@
+<!DOCTYPE html>
+  <html lang="en">
+  	<head>
+        <meta name="viewport" content="width=device-width," initial-scale=1>
+  	    <meta charset="UTF-8">
+  	    <title>Tony Wahula</title>
+        <script src="https://use.fontawesome.com/3a60baea57.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:700" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    </head>
 
+    <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-sm navbar-fixed-top">
+      <a class="navbar-brand" href="index.html">Tony Wahula</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="work.html">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <container>
+      <div class="text-center">
+        <h1 class="work"><strong>Work</strong></h1>
+      </div>
+    </container>
+
+    <div class="container">
+            <!-- Example row of columns -->
+            <div class="row">
+              <div class="col-md-4 col-sm-6">
+                          <!--Panel-->
+                <div class="panel text-center">
+                    <div class="gallery">
+                      <div class="gallery-image">
+                        <img src="assets\images\freestocks-org-187367.jpg"/>
+                          <div class="gallery-text">
+                            <h3>Bamazon</h3>
+                          </div>
+                      </div>
+                    </div>
+                  <div class="panel-body">
+                    <p class="panel-text">This a project I did.</p>
+                    <a class="btn btn-sm btn-primary">MySQL</a>
+                    <a class="btn btn-sm btn-primary">Node.js</a>
+                    <a class="btn btn-sm btn-primary">Bootstrap</a>
+                    <a class="btn btn-sm btn-primary">Express</a>
+                  </div>
+                </div>
+                        <!--/.Panel-->
+              </div>
+
+              <div class="col-md-4 col-sm-6">
+                          <!--Panel-->
+                <div class="panel text-center">
+                    <div class="gallery">
+                      <div class="gallery-image">
+                        <img src="assets\images\kira-auf-der-heide-328511.jpg"/>
+                          <div class="gallery-text">
+                            <h3>Crystal Collector Game</h3>
+                          </div>
+                      </div>
+                    </div>
+                  <div class="panel-body">
+                    <p class="panel-text">This a project I did.</p>
+                    <a class="btn btn-sm btn-primary">MySQL</a>
+                    <a class="btn btn-sm btn-primary">Node.js</a>
+                    <a class="btn btn-sm btn-primary">Bootstrap</a>
+                    <a class="btn btn-sm btn-primary">Express</a>
+                  </div>
+                </div>
+                        <!--/.Panel-->
+              </div>
+
+                <div class="col-md-4 col-sm-6">
+                            <!--Panel-->
+                  <div class="panel text-center">
+                      <div class="gallery">
+                        <div class="gallery-image">
+                          <img src="assets\images\simone-acquaroli-263190.jpg"/>
+                            <div class="gallery-text">
+                              <h3>90's Gif App</h3>
+                            </div>
+                        </div>
+                      </div>
+                    <div class="panel-body">
+                      <p class="panel-text">This a project I did.</p>
+                      <a class="btn btn-sm btn-primary">MySQL</a>
+                      <a class="btn btn-sm btn-primary">Node.js</a>
+                      <a class="btn btn-sm btn-primary">Bootstrap</a>
+                      <a class="btn btn-sm btn-primary">Express</a>
+                    </div>
+                  </div>
+                          <!--/.Panel-->
+                </div>
+
+                <div class="col-md-4 col-sm-6">
+                            <!--Panel-->
+                  <div class="panel text-center">
+                      <div class="gallery">
+                        <div class="gallery-image">
+                          <img src="assets\images\phil-coffman-161251.jpg"/>
+                            <div class="gallery-text">
+                              <h3>Friend Finder</h3>
+                            </div>
+                        </div>
+                      </div>
+                    <div class="panel-body">
+                      <p class="panel-text">This a project I did.</p>
+                      <a class="btn btn-sm btn-primary">MySQL</a>
+                      <a class="btn btn-sm btn-primary">Node.js</a>
+                      <a class="btn btn-sm btn-primary">Bootstrap</a>
+                      <a class="btn btn-sm btn-primary">Express</a>
+                    </div>
+                  </div>
+                          <!--/.Panel-->
+                </div>
+
+                <div class="col-md-4 col-sm-6">
+                            <!--Panel-->
+                  <div class="panel text-center">
+                      <div class="gallery">
+                        <div class="gallery-image">
+                          <img src="assets\images\adam-wilson-138927.jpg"/>
+                            <div class="gallery-text">
+                              <h3>Beer Me App</h3>
+                            </div>
+                        </div>
+                      </div>
+                    <div class="panel-body">
+                      <p class="panel-text">This a project I did.</p>
+                      <a class="btn btn-sm btn-primary">MySQL</a>
+                      <a class="btn btn-sm btn-primary">Node.js</a>
+                      <a class="btn btn-sm btn-primary">Bootstrap</a>
+                      <a class="btn btn-sm btn-primary">Express</a>
+                    </div>
+                  </div>
+                          <!--/.Panel-->
+                </div>
+                          <!-- panel column -->
+                <div class="col-md-4 col-sm-6">
+                            <!--Panel-->
+                  <div class="panel text-center">
+                      <div class="gallery">
+                        <div class="gallery-image">
+                          <img src="assets\images\justin-veenema-156591.jpg"/>
+                            <div class="gallery-text">
+                              <h3>Lost Pet Finder</h3>
+                            </div>
+                        </div>
+                      </div>
+                    <div class="panel-body">
+                      <p class="panel-text">This a project I did.</p>
+                      <a class="btn btn-sm btn-primary">MySQL</a>
+                      <a class="btn btn-sm btn-primary">Node.js</a>
+                      <a class="btn btn-sm btn-primary">Bootstrap</a>
+                      <a class="btn btn-sm btn-primary">Express</a>
+                    </div>
+                  </div>
+                          <!--/.Panel-->
+              </div>
+                          <!--Panel column-->
+          </div>
+                          <!-- Panel row -->
+        </div>
+                          <!-- Container -->
+
+
+
+    <footer class="footer">
+      <div class="container text-center">
+        <span class="text-muted">Copyright &copy; 2017 Tony Wahula</span>
+
+        <a class="social" href="https://github.com/wahula4" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+        <a class="social" href="www.linkedin.com/in/tony-wahula" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+      </div>
+    </footer>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+  </body>
+</html>
