about page background image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
 
-    <body>
+    <body class="homepage">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-fixed-top">
       <a class="navbar-brand" href="index.html">Tony Wahula</a>
@@ -35,14 +35,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-              <div class="item">
+              <div class="item index">
                    <p class="label success new-label"><span class="align">Hello,</span> I'm Tony Wahula</p>
               </div>
-              <p>I'm a full stack web developer living in sunny Denver, Colorado.  </p>
+              <p>I'm a full stack web developer living in sunny Denver, Colorado.</p>
             </div>
             <div class="col-md-4">
                         <!--Panel-->
-              <div class="panel text-center">
+              <div class="panel text-center index">
                 <h1 class="skills">Skills</h1>
                 <div class="skills-tabs">
                   <a class="btn btn btn-primary">HTML5</a>
