--- a/work.html
+++ b/work.html
@@ -43,6 +43,7 @@
               <div class="col-md-4 col-sm-6">
                           <!--Panel-->
                 <div class="panel text-center">
+                  <a href="https://www.google.com/" target="_blank">
                     <div class="gallery">
                       <div class="gallery-image">
                         <img src="assets\images\freestocks-org-187367.jpg"/>
@@ -50,9 +51,11 @@
                             <h3>Bamazon</h3>
                           </div>
                       </div>
-                    </div>
+                    </div></a>
                   <div class="panel-body">
-                    <p class="panel-text">This a project I did.</p>
+                    <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                       printer took a galley of type and scrambled it to make a type specimen book.</p>
                     <a class="btn btn-sm btn-primary">MySQL</a>
                     <a class="btn btn-sm btn-primary">Node.js</a>
                     <a class="btn btn-sm btn-primary">Bootstrap</a>
@@ -65,6 +68,7 @@
               <div class="col-md-4 col-sm-6">
                           <!--Panel-->
                 <div class="panel text-center">
+                  <a href="https://www.google.com/" target="_blank">
                     <div class="gallery">
                       <div class="gallery-image">
                         <img src="assets\images\kira-auf-der-heide-328511.jpg"/>
@@ -72,9 +76,11 @@
                             <h3>Crystal Collector Game</h3>
                           </div>
                       </div>
-                    </div>
+                    </div></a>
                   <div class="panel-body">
-                    <p class="panel-text">This a project I did.</p>
+                    <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                       printer took a galley of type and scrambled it to make a type specimen book.</p>
                     <a class="btn btn-sm btn-primary">MySQL</a>
                     <a class="btn btn-sm btn-primary">Node.js</a>
                     <a class="btn btn-sm btn-primary">Bootstrap</a>
@@ -87,6 +93,7 @@
                 <div class="col-md-4 col-sm-6">
                             <!--Panel-->
                   <div class="panel text-center">
+                    <a href="https://www.google.com/" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
                           <img src="assets\images\simone-acquaroli-263190.jpg"/>
@@ -94,9 +101,11 @@
                               <h3>90's Gif App</h3>
                             </div>
                         </div>
-                      </div>
+                      </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">This a project I did.</p>
+                      <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                         printer took a galley of type and scrambled it to make a type specimen book.</p>
                       <a class="btn btn-sm btn-primary">MySQL</a>
                       <a class="btn btn-sm btn-primary">Node.js</a>
                       <a class="btn btn-sm btn-primary">Bootstrap</a>
@@ -109,6 +118,7 @@
                 <div class="col-md-4 col-sm-6">
                             <!--Panel-->
                   <div class="panel text-center">
+                    <a href="https://www.google.com/" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
                           <img src="assets\images\phil-coffman-161251.jpg"/>
@@ -116,9 +126,11 @@
                               <h3>Friend Finder</h3>
                             </div>
                         </div>
-                      </div>
+                      </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">This a project I did.</p>
+                      <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                         printer took a galley of type and scrambled it to make a type specimen book.</p>
                       <a class="btn btn-sm btn-primary">MySQL</a>
                       <a class="btn btn-sm btn-primary">Node.js</a>
                       <a class="btn btn-sm btn-primary">Bootstrap</a>
@@ -131,6 +143,7 @@
                 <div class="col-md-4 col-sm-6">
                             <!--Panel-->
                   <div class="panel text-center">
+                    <a href="https://www.google.com/" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
                           <img src="assets\images\adam-wilson-138927.jpg"/>
@@ -138,9 +151,11 @@
                               <h3>Beer Me App</h3>
                             </div>
                         </div>
-                      </div>
+                      </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">This a project I did.</p>
+                      <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                         printer took a galley of type and scrambled it to make a type specimen book.</p>
                       <a class="btn btn-sm btn-primary">MySQL</a>
                       <a class="btn btn-sm btn-primary">Node.js</a>
                       <a class="btn btn-sm btn-primary">Bootstrap</a>
@@ -153,6 +168,7 @@
                 <div class="col-md-4 col-sm-6">
                             <!--Panel-->
                   <div class="panel text-center">
+                    <a href="https://www.google.com/" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
                           <img src="assets\images\justin-veenema-156591.jpg"/>
@@ -160,9 +176,11 @@
                               <h3>Lost Pet Finder</h3>
                             </div>
                         </div>
-                      </div>
+                      </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">This a project I did.</p>
+                      <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                         printer took a galley of type and scrambled it to make a type specimen book.</p>
                       <a class="btn btn-sm btn-primary">MySQL</a>
                       <a class="btn btn-sm btn-primary">Node.js</a>
                       <a class="btn btn-sm btn-primary">Bootstrap</a>
