need to add personal bio

--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
                <h1 class="label success new-label"><span class="align">Let's Talk Soon</span></h1>
           </div>
           <br>
-          <h1>Take your pick</h1>
+          <h1>Take your pick:</h1>
           <h1><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:mawahula4@gmail.com">mawahula4@gmail.com</a></h1>
           <h1><i class="fa fa-linkedin-square" aria-hidden="true"></i><a href="https://www.linkedin.com/in/tony-wahula" target="_blank">LinkedIn</a></h1>
-          <h1><i class="fa fa-mobile" aria-hidden="true"></i>(919)-608-1562</h1>
+          <h1><i class="fa fa-mobile" aria-hidden="true"></i>919-608-1562</h1>
         </div>
       </div>
     </div>
