--- a/work.html
+++ b/work.html
@@ -202,7 +202,7 @@
         <span class="text-muted">Copyright &copy; 2017 Tony Wahula</span>
 
         <a class="social" href="https://github.com/wahula4" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-        <a class="social" href="www.linkedin.com/in/tony-wahula" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+        <a class="social" href="https://www.linkedin.com/in/tony-wahula" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
       </div>
     </footer>
 
