updated index pic

--- a/index.html
+++ b/index.html
@@ -33,17 +33,21 @@
     </nav>
 
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-              <div class="item index">
-                   <p class="label success new-label"><span class="align">Hello,</span> I'm Tony Wahula</p>
-              </div>
-              <p>I'm a full stack web developer living in sunny Denver, Colorado.</p>
-            </div>
-            <div class="col-md-4">
+        <div class="row bio">
+          <div class="col-md-6">
+            <h1>Hello, I'm Tony</h1>
+            <p>I'm a full stack web developer living in sunny Denver, Colorado.  I specialize in the MERN stack
+               but I'm willing and able to learn new technologies.  I love the adventure of creating new
+               applications and seeing them come to life.  Feel free to contact me posthaste!</p>
+           </div>
+          </div>
+
+        </div>
+        <div class="row tabs">
+          <div class="col-md-6">
                         <!--Panel-->
-              <div class="panel text-center index">
-                <h1 class="skills">Skills</h1>
+              <div class="panel text-center">
+                <h3 class="skills">Skills</h3>
                 <div class="skills-tabs">
                   <a class="btn btn btn-primary">HTML5</a>
                   <a class="btn btn btn-primary">CSS3</a>
@@ -64,18 +68,6 @@
               </div>
                       <!--/.Panel-->
             </div>
-            <!-- <div class="col-md-4">
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <h3 class="panel-title">Skills</h3>
-                </div>
-                <div class="panel-body">
-                  <i class="fa fa-html5" aria-hidden="true"></i>HTML5
-                  <i class="fa fa-css3" aria-hidden="true"></i>CSS3
-                  <p>Javascript MySQL React MongoDB Express Node.js Bootstrap</p>
-                </div>
-              </div>
-            </div> -->
         </div>
       </div>
 
@@ -83,7 +75,7 @@
       <div class="container text-center">
         <span class="text-muted">Copyright &copy; 2017 Tony Wahula</span>
         <a class="social" href="https://github.com/wahula4" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-        <a class="social" href="www.linkedin.com/in/tony-wahula" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+        <a class="social" href="https://www.linkedin.com/in/tony-wahula" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
       </div>
     </footer>
 
