--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-fixed-top">
-      <a class="navbar-brand" href="index.html">Tony Wahula</a>
+      <a class="navbar-brand" href="index.html"><img src="./assets/images/Tony-logo-horiz-white.svg" alt="logo" style="height:30px"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
