--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
   <html lang="en">
   	<head>
-        <meta name="viewport" content="width=device-width," initial-scale=1>
+        <meta name="viewport" content="width=device-width" initial-scale=1>
   	    <meta charset="UTF-8">
   	    <title>Tony Wahula</title>
         <script src="https://use.fontawesome.com/3a60baea57.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bitter:400,700|Roboto+Condensed:700" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
 
     <body class="homepage">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-fixed-top">
-      <a class="navbar-brand" href="index.html">Tony Wahula</a>
+      <a class="navbar-brand" href="index.html"><img src="./assets/images/Tony-logo-horiz-white.svg" alt="logo" style="height:30px"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
