--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
     <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-fixed-top">
-      <a class="navbar-brand" href="index.html">Tony Wahula</a>
+      <a class="navbar-brand" href="index.html"><img src="./assets/images/Tony-logo-horiz-white.svg" alt="logo" style="height:30px"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,11 +31,14 @@
         </ul>
       </div>
     </nav>
-    <container>
-      <div class="text-center">
-        <h1 class="work"><strong>Work</strong></h1>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="work text-center"><strong>Work</strong></h1>
+        </div>
       </div>
-    </container>
+    </div>
 
     <div class="container">
             <!-- Example row of columns -->
@@ -43,7 +46,7 @@
               <div class="col-md-4 col-sm-6">
                           <!--Panel-->
                 <div class="panel text-center">
-                  <a href="https://www.google.com/" target="_blank">
+                  <a href="https://github.com/wahula4/BamazonApp" target="_blank">
                     <div class="gallery">
                       <div class="gallery-image">
                         <img src="assets\images\freestocks-org-187367.jpg"/>
@@ -53,13 +56,9 @@
                       </div>
                     </div></a>
                   <div class="panel-body">
-                    <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                       printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p class="panel-text">Bamazon is an Amazon-like storefront using MySQL and Node.js. There are two options while running this app. For customer's, the app will take in orders and deplete stock from the store's inventory. For manager's, the app will allow the user to view and add to product inventory.  Check out the readME to see it in action</p>
                     <a class="btn btn-sm btn-primary">MySQL</a>
                     <a class="btn btn-sm btn-primary">Node.js</a>
-                    <a class="btn btn-sm btn-primary">Bootstrap</a>
-                    <a class="btn btn-sm btn-primary">Express</a>
                   </div>
                 </div>
                         <!--/.Panel-->
@@ -68,7 +67,7 @@
               <div class="col-md-4 col-sm-6">
                           <!--Panel-->
                 <div class="panel text-center">
-                  <a href="https://www.google.com/" target="_blank">
+                  <a href="https://wahula4.github.io/week-4-game/" target="_blank">
                     <div class="gallery">
                       <div class="gallery-image">
                         <img src="assets\images\kira-auf-der-heide-328511.jpg"/>
@@ -78,13 +77,9 @@
                       </div>
                     </div></a>
                   <div class="panel-body">
-                    <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                       printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    <a class="btn btn-sm btn-primary">MySQL</a>
-                    <a class="btn btn-sm btn-primary">Node.js</a>
-                    <a class="btn btn-sm btn-primary">Bootstrap</a>
-                    <a class="btn btn-sm btn-primary">Express</a>
+                    <p class="panel-text">This game is an example of how to dynamically update the HTML using jQuery.</p>
+                    <a class="btn btn-sm btn-primary">Javascript</a>
+                    <a class="btn btn-sm btn-primary">jQuery</a>
                   </div>
                 </div>
                         <!--/.Panel-->
@@ -93,7 +88,7 @@
                 <div class="col-md-4 col-sm-6">
                             <!--Panel-->
                   <div class="panel text-center">
-                    <a href="https://www.google.com/" target="_blank">
+                    <a href="https://wahula4.github.io/GiphyAPI/" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
                           <img src="assets\images\simone-acquaroli-263190.jpg"/>
@@ -103,13 +98,11 @@
                         </div>
                       </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                         printer took a galley of type and scrambled it to make a type specimen book.</p>
-                      <a class="btn btn-sm btn-primary">MySQL</a>
-                      <a class="btn btn-sm btn-primary">Node.js</a>
+                      <p class="panel-text">Using the GIPHY API to make a dynamic web page that populates with gifs of your choice.</p>
+                      <a class="btn btn-sm btn-primary">Javascript</a>
+                      <a class="btn btn-sm btn-primary">jQuery</a>
                       <a class="btn btn-sm btn-primary">Bootstrap</a>
-                      <a class="btn btn-sm btn-primary">Express</a>
+                      <a class="btn btn-sm btn-primary">Ajax</a>
                     </div>
                   </div>
                           <!--/.Panel-->
@@ -118,23 +111,23 @@
                 <div class="col-md-4 col-sm-6">
                             <!--Panel-->
                   <div class="panel text-center">
-                    <a href="https://www.google.com/" target="_blank">
+                    <a href="https://shielded-peak-66304.herokuapp.com" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
                           <img src="assets\images\phil-coffman-161251.jpg"/>
                             <div class="gallery-text">
-                              <h3>Friend Finder</h3>
+                              <h3>Eat the Burger</h3>
                             </div>
                         </div>
                       </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                         printer took a galley of type and scrambled it to make a type specimen book.</p>
+                      <p class="panel-text">This web app allows users to input the name of the burger they want to eat, then click to devour it.  The state of each burger is stored in a MySQL database.</p>
                       <a class="btn btn-sm btn-primary">MySQL</a>
-                      <a class="btn btn-sm btn-primary">Node.js</a>
+                      <a class="btn btn-sm btn-primary">Handlebars</a>
                       <a class="btn btn-sm btn-primary">Bootstrap</a>
                       <a class="btn btn-sm btn-primary">Express</a>
+                      <a class="btn btn-sm btn-primary">Sequelize</a>
+                      <a class="btn btn-sm btn-primary">Node</a>
                     </div>
                   </div>
                           <!--/.Panel-->
@@ -153,13 +146,11 @@
                         </div>
                       </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                         printer took a galley of type and scrambled it to make a type specimen book.</p>
-                      <a class="btn btn-sm btn-primary">MySQL</a>
-                      <a class="btn btn-sm btn-primary">Node.js</a>
+                      <p class="panel-text">This web app enables users to search a city for brewery locations.  With firebase authentication, the user can save a beer journal of their experiences.</p>
+                      <a class="btn btn-sm btn-primary">jQuery</a>
                       <a class="btn btn-sm btn-primary">Bootstrap</a>
-                      <a class="btn btn-sm btn-primary">Express</a>
+                      <a class="btn btn-sm btn-primary">Firebase</a>
+                      <a class="btn btn-sm btn-primary">APIs</a>
                     </div>
                   </div>
                           <!--/.Panel-->
@@ -168,22 +159,19 @@
                 <div class="col-md-4 col-sm-6">
                             <!--Panel-->
                   <div class="panel text-center">
-                    <a href="https://www.google.com/" target="_blank">
+                    <a href="https://intense-shore-29295.herokuapp.com/" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
                           <img src="assets\images\justin-veenema-156591.jpg"/>
                             <div class="gallery-text">
-                              <h3>Lost Pet Finder</h3>
+                              <h3>Friend Finder</h3>
                             </div>
                         </div>
                       </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                         printer took a galley of type and scrambled it to make a type specimen book.</p>
-                      <a class="btn btn-sm btn-primary">MySQL</a>
+                      <p class="panel-text">A compatibility-based "FriendFinder" application. This full-stack site will take in results from users' surveys, then compare their answers with those from other users. The app will then display the name and picture of the user with the best overall match.</p>
                       <a class="btn btn-sm btn-primary">Node.js</a>
-                      <a class="btn btn-sm btn-primary">Bootstrap</a>
+                      <a class="btn btn-sm btn-primary">Materialize</a>
                       <a class="btn btn-sm btn-primary">Express</a>
                     </div>
                   </div>
