--- a/work.html
+++ b/work.html
@@ -114,7 +114,7 @@
                     <a href="https://shielded-peak-66304.herokuapp.com" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
-                          <img src="assets\images\phil-coffman-161251.jpg"/>
+                          <img src="assets\images\niklas-rhose-14304.jpg"/>
                             <div class="gallery-text">
                               <h3>Eat the Burger</h3>
                             </div>
@@ -162,7 +162,7 @@
                     <a href="https://intense-shore-29295.herokuapp.com/" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
-                          <img src="assets\images\justin-veenema-156591.jpg"/>
+                          <img src="assets\images\phil-coffman-161251.jpg"/>
                             <div class="gallery-text">
                               <h3>Friend Finder</h3>
                             </div>
