--- a/work.html
+++ b/work.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
   <html lang="en">
   	<head>
-        <meta name="viewport" content="width=device-width," initial-scale=1>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
   	    <meta charset="UTF-8">
   	    <title>Tony Wahula</title>
+        <link rel="icon" type="image/png" href="assets/images/thumb-up---white-48-193150.png"/>
         <script src="https://use.fontawesome.com/3a60baea57.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:700" rel="stylesheet">
@@ -46,19 +47,25 @@
               <div class="col-md-4 col-sm-6">
                           <!--Panel-->
                 <div class="panel text-center">
-                  <a href="https://github.com/wahula4/BamazonApp" target="_blank">
+                  <a href="https://salty-temple-79451.herokuapp.com/" target="_blank">
                     <div class="gallery">
                       <div class="gallery-image">
                         <img src="assets\images\freestocks-org-187367.jpg"/>
                           <div class="gallery-text">
-                            <h3>Bamazon</h3>
+                            <h3>Coolify</h3>
                           </div>
                       </div>
                     </div></a>
                   <div class="panel-body">
-                    <p class="panel-text">Bamazon is an Amazon-like storefront using MySQL and Node.js. There are two options while running this app. For customer's, the app will take in orders and deplete stock from the store's inventory. For manager's, the app will allow the user to view and add to product inventory.  Check out the readME to see it in action</p>
-                    <a class="btn btn-sm btn-primary">MySQL</a>
+                    <p class="panel-text">Coolify is a fullstack MERN app for users that have become out of touch with what's cool.  I used Jest and Nightmare.js for testing.</p>
+                    <a class="btn btn-sm btn-primary">MongoDB</a>
                     <a class="btn btn-sm btn-primary">Node.js</a>
+                    <a class="btn btn-sm btn-primary">Express</a>
+                    <a class="btn btn-sm btn-primary">React</a>
+                    <a class="btn btn-sm btn-primary">Passport.js</a>
+                    <a class="btn btn-sm btn-primary">Animate.css</a>
+                    <a class="btn btn-sm btn-primary">Jest</a>
+                    <a class="btn btn-sm btn-primary">Nightmare.js</a>
                   </div>
                 </div>
                         <!--/.Panel-->
@@ -88,21 +95,21 @@
                 <div class="col-md-4 col-sm-6">
                             <!--Panel-->
                   <div class="panel text-center">
-                    <a href="https://wahula4.github.io/GiphyAPI/" target="_blank">
+                    <a href="http://www.sharemygame.com/share/499f11c9-831a-4150-af05-b638a313282a" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
-                          <img src="assets\images\simone-acquaroli-263190.jpg"/>
+                          <img src="assets\images\tim-mossholder-191483.jpg"/>
                             <div class="gallery-text">
-                              <h3>90's Gif App</h3>
+                              <h3>Rocket Game</h3>
                             </div>
                         </div>
                       </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">Using the GIPHY API to make a dynamic web page that populates with gifs of your choice.</p>
-                      <a class="btn btn-sm btn-primary">Javascript</a>
-                      <a class="btn btn-sm btn-primary">jQuery</a>
-                      <a class="btn btn-sm btn-primary">Bootstrap</a>
-                      <a class="btn btn-sm btn-primary">Ajax</a>
+                      <p class="panel-text">A 3 level game with the goal of getting from point A to point B. Spacebar = thrust, A = rotate left, D = rotate right.</p>
+                      <a class="btn btn-sm btn-primary">Unity</a>
+                      <a class="btn btn-sm btn-primary">C#</a>
+                      <a class="btn btn-sm btn-primary">Sourcetree</a>
+                      <a class="btn btn-sm btn-primary">Visual Studio</a>
                     </div>
                   </div>
                           <!--/.Panel-->
@@ -136,21 +143,20 @@
                 <div class="col-md-4 col-sm-6">
                             <!--Panel-->
                   <div class="panel text-center">
-                    <a href="https://www.google.com/" target="_blank">
+                    <a href="https://wahula4.github.io/GiphyAPI/" target="_blank">
                       <div class="gallery">
                         <div class="gallery-image">
                           <img src="assets\images\adam-wilson-138927.jpg"/>
                             <div class="gallery-text">
-                              <h3>Beer Me App</h3>
+                              <h3>Giphy</h3>
                             </div>
                         </div>
                       </div></a>
                     <div class="panel-body">
-                      <p class="panel-text">This web app enables users to search a city for brewery locations.  With firebase authentication, the user can save a beer journal of their experiences.</p>
+                      <p class="panel-text">This app allows you to search the giphy API based on the topic of your choice</p>
                       <a class="btn btn-sm btn-primary">jQuery</a>
                       <a class="btn btn-sm btn-primary">Bootstrap</a>
-                      <a class="btn btn-sm btn-primary">Firebase</a>
-                      <a class="btn btn-sm btn-primary">APIs</a>
+                      <a class="btn btn-sm btn-primary">Ajax</a>
                     </div>
                   </div>
                           <!--/.Panel-->
