--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
   <html lang="en">
   	<head>
-        <meta name="viewport" content="width=device-width," initial-scale=1>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
   	    <meta charset="UTF-8">
   	    <title>Tony Wahula</title>
+        <link rel="icon" type="image/png" href="assets/images/thumb-up---white-48-193150.png"/>
         <script src="https://use.fontawesome.com/3a60baea57.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:700" rel="stylesheet">
