--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
   <html lang="en">
   	<head>
-        <meta name="viewport" content="width=device-width" initial-scale=1>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
   	    <meta charset="UTF-8">
   	    <title>Tony Wahula</title>
+        <link rel="icon" type="image/png" href="assets/images/thumb-up---white-48-193150.png"/>
         <script src="https://use.fontawesome.com/3a60baea57.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Bitter:400,700|Roboto+Condensed:700" rel="stylesheet">
@@ -36,9 +37,9 @@
         <div class="row bio">
           <div class="col-md-6">
             <h1>Hello, I'm Tony</h1>
-            <p>I'm a full stack web developer living in sunny Denver, Colorado.  I specialize in the MERN stack
-               but I'm willing and able to learn new technologies.  I love the adventure of creating new
-               applications and seeing them come to life.  Feel free to contact me posthaste!</p>
+            <p>I'm a full stack web developer looking for a full-time position in sunny Denver, CO. I specialize in the MERN stack
+               but I'm willing and able to learn new technologies. I love the adventure of creating new
+               applications and seeing them come to life. Feel free to contact me posthaste!</p>
            </div>
           </div>
 
@@ -52,18 +53,12 @@
                   <a class="btn btn btn-primary">HTML5</a>
                   <a class="btn btn btn-primary">CSS3</a>
                   <a class="btn btn btn-primary">MySQL</a>
-                  <a class="btn btn btn-primary">Node.js</a>
+                  <a class="btn btn btn-primary">Unity</a>
                   <a class="btn btn btn-primary">Bootstrap</a>
-                  <a class="btn btn btn-primary">Express</a>
-                  <a class="btn btn btn-primary">MongoDB</a>
-                  <a class="btn btn btn-primary">React</a>
-                  <a class="btn btn btn-primary">Sequelize</a>
                   <a class="btn btn btn-primary">Javascript</a>
                   <a class="btn btn btn-primary">JQuery</a>
                   <a class="btn btn btn-primary">Git</a>
-                  <a class="btn btn btn-primary">Command Line</a>
                   <a class="btn btn btn-primary">GitHub</a>
-                  <a class="btn btn btn-primary">Materialize</a>
                 </div>
               </div>
                       <!--/.Panel-->
