added memory game

--- a/work.html
+++ b/work.html
@@ -47,25 +47,20 @@
               <div class="col-md-4 col-sm-6">
                           <!--Panel-->
                 <div class="panel text-center">
-                  <a href="https://salty-temple-79451.herokuapp.com/" target="_blank">
+                  <a href="https://wahula4.github.io/MemoryGame/" target="_blank">
                     <div class="gallery">
                       <div class="gallery-image">
-                        <img src="assets\images\freestocks-org-187367.jpg"/>
+                        <img src="assets\images\memoryGame.PNG"/>
                           <div class="gallery-text">
-                            <h3>Coolify</h3>
+                            <h3>Memory Game</h3>
                           </div>
                       </div>
                     </div></a>
                   <div class="panel-body">
-                    <p class="panel-text">Coolify is a fullstack MERN app for users that have become out of touch with what's cool.  I used Jest and Nightmare.js for testing.</p>
-                    <a class="btn btn-sm btn-primary">MongoDB</a>
-                    <a class="btn btn-sm btn-primary">Node.js</a>
-                    <a class="btn btn-sm btn-primary">Express</a>
-                    <a class="btn btn-sm btn-primary">React</a>
-                    <a class="btn btn-sm btn-primary">Passport.js</a>
-                    <a class="btn btn-sm btn-primary">Animate.css</a>
-                    <a class="btn btn-sm btn-primary">Jest</a>
-                    <a class="btn btn-sm btn-primary">Nightmare.js</a>
+                    <p class="panel-text">Memory game is a 16 card matching game</p>
+                    <a class="btn btn-sm btn-primary">JavaScript</a>
+                    <a class="btn btn-sm btn-primary">jQuery</a>
+                    <a class="btn btn-sm btn-primary">ES6</a>
                   </div>
                 </div>
                         <!--/.Panel-->
